# claude-code-project-scaffolder

./: README.md  cookiecutter.json  project-scaffolder.md  setup-project.sh
{{cookiecutter.project_slug}}/: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml  template.env
{{cookiecutter.project_slug}}/src/{{cookiecutter.package_name}}/: __init__.py  main.py
{{cookiecutter.project_slug}}/tests/: __init__.py  test_main.py
